# spin_up

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  restrictions.yaml  resume_context.yaml  rules.yaml
jobpipe/: __init__.py  __main__.py  agent.py  cli.py  config.py  graph.py  llm.py  models.py  pipeline.py  prompts.py  renderer.py  rules.py  sheets.py  state.py
jobpipe/prompts/: cover_letter.prompt.md  linkedin_search.prompt.md  outreach.prompt.md  resume_rewrite.prompt.md  resume_selection.prompt.md  shared_restrictions.prompt.md
jobpipe/utils/: __init__.py  debug.py  prompting.py  rendering.py  rows.py
templates/: resume_template.docx
